board_historiesにmove_sfenカラムを追加した
